<resources>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="join_clan">Join clan</string>
    <string name="create_clan">Create clan</string>
    <string name="clan_token">Clan token</string>
    <string name="clan_name">Clan name</string>
    <string name="current_clan">Current_clan:</string>
    <string name="loading">loading...</string>
    <string name="game_id">Game ID</string>
    <string name="name">Name</string>
    <string name="save">Save</string>

    <string name="test">thisistest</string>
    <string name="nepodarilo_sa_nacitat">Nepodarilo sa nacitat</string>
</resources>
